Horizontal scrolling projects with correct size

--- a/test.css
+++ b/test.css
@@ -48,26 +48,24 @@ body {
 }
 
 .btn-container {
-    margin-left: auto;
-    margin-right: 2%;
-    position:relative;
-    width: 10%;
-}
-
-.btn-container img {
-    width: 100%;
-}
-
-.btn-container .btn-github {
-    position: absolute;
-    top: 50%;
+    background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0.4), rgba(255, 0, 0, 0.2));
+    display: inline-block;
     left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
+    text-align: right;
+    padding-left: 1%;
+    padding-right: 1%;
+
+    position:relative;
+    width: 50%;
+    height: 45%;
+}
+
+.btn-icon>img{
+    padding: 1%;
+    background-size: contain;
+    height: 100%;
     border: none;
     cursor: pointer;
-    width: 100%;
-    height: 100%;
     outline: none;
     background-color: Transparent;
 }
@@ -97,12 +95,10 @@ body {
 .list-container{
     width: 100%;
     height: 90%;
-    padding-top: 1%;
-    padding-bottom: 1%;
+    padding: 1%;
     display: inline-flex;
-    flex-wrap: wrap;
-
-    justify-content: space-evenly;
+    justify-content: flex-start;
+    box-sizing: border-box;
 
     background: no-repeat;
     background-position: center;
@@ -112,35 +108,45 @@ body {
     list-style-type: none;
     background-image: linear-gradient(to bottom, rgba(255, 255, 0, 1), rgba(255, 255, 0, 1));
 
-    overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 .project {
-    width: 30%;
+    flex-shrink: 0;
+    
+    width: 25%;
     padding: 1%;
     margin: 1%;
     display: grid;
     grid-template-columns: 70% 30%;
+    grid-template-rows: 85% 15%;
     position: relative;
 
     text-align: center;
 
-    float: left;
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 1));
 }
 
-.preview>img {
+.preview {
     height: 100%;
     padding: 1%;
     display: inline-block;
     background: no-repeat;
     background-position: center;
-    background-size: 100%;
     position: relative;
 
     text-align: center;
-    object-fit: cover;
+}
+
+.preview>img {
     width: 100%;
+    height: 100%;
+    display: inline-block;
+    background: no-repeat;
+    background-position: center;
+    position: relative;
+
+    text-align: center;
 }
 
 .skills {
